Fix toolbar alignment

--- a/trunk/themes/MonoBook/monobook.css
+++ b/trunk/themes/MonoBook/monobook.css
@@ -1690,6 +1690,10 @@ img.toolbar:hover {
     cursor: pointer;
 }
 
+input.toolbar[type=image] {
+    vertical-align: top;
+}
+
 #editform .editOptions {
     display: inline;
 }
